fix burger menu not showing

--- a/web_static/styles.css/100-places.css
+++ b/web_static/styles.css/100-places.css
@@ -1,43 +1,3 @@
-/* Responsive */
-
-@media screen and (max-width: 944px){
-	.places h1 {
-		text-align: center;
-   }
-}
-
-@media screen and (max-width: 750px){
-	.button_mobile {
-		color: #ffffff;
-		height: 48px;
-		width: 48px;
-		border: none;
-		border-radius: 4px;
-		transition: 0.3s;
-		margin: 14px 14px 0px auto;
-		background-image: url(../img/icon_search.png);
-		background-repeat: no-repeat;
-		background-size: 35px 35px;
-   }
-	.menu {
-		display: block;
-   }
-	.locations, button, .amenities{
-		display: none;
-   }
-	.burger{
-		display: block;
-   }
-	.filters{
-		border-top: 1px solid #dddddd;
-		border-bottom: 0;
-		height: 20px;
-   }
-	.container{
-		margin-top: 0;
-   }
-}
-
 /* Burger Menu */
 
 .responsive-menu {
@@ -69,7 +29,47 @@
 .responsive-menu h2{
 	padding-left: 0;
 }
+.burger {
+	display: none;
+}
 
+/* Responsive */
+
+@media screen and (max-width: 944px){
+	.places h1 {
+		text-align: center;
+   }
+}
+
+@media screen and (max-width: 750px){
+	.button_mobile {
+		color: #ffffff;
+		height: 48px;
+		width: 48px;
+		border: none;
+		border-radius: 4px;
+		transition: 0.3s;
+		margin: 14px 14px 0px auto;
+		background-image: url(../img/icon_search.png);
+		background-repeat: no-repeat;
+		background-size: 35px 35px;
+   }
+
+	.locations, button, .amenities{
+		display: none;
+   }
+	.burger{
+		display: block;
+   }
+	.filters{
+		border-top: 1px solid #dddddd;
+		border-bottom: 0;
+		height: 20px;
+   }
+	.container{
+		margin-top: 0;
+   }
+}
 
 /* Main */
 
